fixed alignment

--- a/src/module/components/Research.css
+++ b/src/module/components/Research.css
@@ -65,12 +65,13 @@ h2 {
   .search-items {
 	  color: white;
 	  font-weight: bolder;
-	  margin-right: 30px;
+	  width: 120px;
 	  font-size: 18px;
   }
 
   .div-right {
 	  text-align: right;
+	  margin-left: 40px;
   }
 
   .div-right button {
@@ -161,7 +162,7 @@ h2 {
 		width: 80px;
 	}
 	.search-items {
-		margin-right: 10px;
+		width: 100px;
 		font-size: 16px;
 	}
 }
@@ -174,7 +175,6 @@ h2 {
 		width: 80px;
 	}
 	.search-items {
-		margin-right: 10px;
 		font-size: 16px;
 	}
 }
